--- a/pom.xml
+++ b/pom.xml
@@ -2,57 +2,49 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
-    <artifactId>web-app</artifactId>
-    <version>1.0-SNAPSHOT</version>
+  <groupId>com.example</groupId>
+  <artifactId>web-app</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-    <packaging>jar</packaging>
+  <packaging>war</packaging> <!-- Important: WAR packaging -->
 
-    <name>Web App</name>
-    <description>A simple web application</description>
+  <name>Web Application</name>
+  <description>Simple Java Web Application - WAR</description>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source> <!-- or 17, 21 depending on your Java version -->
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source> <!-- Java version -->
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 
-    <dependencies>
-        <!-- Example: Servlet API, if you are using servlets -->
-        <!--
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
-            <scope>provided</scope>
-        </dependency>
-        -->
-    </dependencies>
+  <dependencies>
+    <!-- Servlet API dependency -->
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>5.0.0</version>
+      <scope>provided</scope> <!-- 'provided' because container like Tomcat will provide it -->
+    </dependency>
+  </dependencies>
 
-    <build>
-        <plugins>
-            <!-- Plugin to compile and package Java code -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-            </plugin>
+  <build>
+    <plugins>
+      <!-- Compiler plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+      </plugin>
 
-            <!-- Plugin to create an executable jar -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>your.main.ClassName</mainClass> <!-- Replace this -->
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+      <!-- WAR plugin (optional, Maven automatically detects war packaging) -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.2</version>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
