--- a/pom.xml
+++ b/pom.xml
@@ -2,48 +2,50 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
+
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example</groupId>
   <artifactId>web-app</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <packaging>war</packaging> <!-- Important: WAR packaging -->
+  <packaging>war</packaging> <!-- Important: WAR -->
 
   <name>Web Application</name>
-  <description>Simple Java Web Application - WAR</description>
+  <description>A simple Java web application project</description>
 
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source> <!-- Java version -->
+    <maven.compiler.source>1.8</maven.compiler.source> <!-- Java 8 -->
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
-    <!-- Servlet API dependency -->
+    <!-- Servlet API (provided by Tomcat/Server) -->
     <dependency>
-      <groupId>jakarta.servlet</groupId>
-      <artifactId>jakarta.servlet-api</artifactId>
-      <version>5.0.0</version>
-      <scope>provided</scope> <!-- 'provided' because container like Tomcat will provide it -->
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
   <build>
     <plugins>
-      <!-- Compiler plugin -->
+
+      <!-- Maven Compiler Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
       </plugin>
 
-      <!-- WAR plugin (optional, Maven automatically detects war packaging) -->
+      <!-- Maven WAR Plugin (compatible with older Maven) -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>3.3.2</version>
+        <version>2.6</version> <!-- old, stable version -->
       </plugin>
+
     </plugins>
   </build>
 
